# precisemcp

./: .cursorrules  CLEANUP_NOTES.md  MCP_TOOLS_DOCUMENTATION.md  MCP_TOOLS_QUICK_REFERENCE.md  OUTPUT_FORMAT_SPECIFICATION.md  README.md  REFACTORING_GUIDE.md  auth.py  client.py  client_http.py  client_streamable.py  config.py  data_processing.py  dynamic_client.py  interactive_client.py  main.py  mcp_precise.py  mcp_utils.py  pyproject.toml  server.py  server_streamable.py  test_client.py  test_transports.py  tools.py
tmp/: auto_discovery_client.py  client_streamable.py  client_streamable_dynamic.py
